# sentinelforge

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
playbooks/: brute-force-response.yml  data-exfiltration-response.yml  malware-containment.yml  phishing-response.yml  privilege-escalation-response.yml
sample_data/: json_samples.json  windows_event.xml
src/sentinelforge/: __init__.py  cli.py  schemas.py  store.py
src/sentinelforge/api/: __init__.py  routes.py
src/sentinelforge/correlate/: __init__.py  engine.py
src/sentinelforge/dashboard/: __init__.py  app.py
src/sentinelforge/dashboard/static/css/: dashboard.css
src/sentinelforge/dashboard/static/js/: dashboard.js
src/sentinelforge/dashboard/templates/: index.html
src/sentinelforge/hunt/: __init__.py  hunter.py
src/sentinelforge/ingest/: __init__.py  enrichment.py  normalizer.py  parsers.py  pipeline.py
src/sentinelforge/investigate/: __init__.py  agent.py
src/sentinelforge/models/: __init__.py  detector.py
src/sentinelforge/playbook/: __init__.py  engine.py
src/sentinelforge/triage/: __init__.py  agent.py
tests/: conftest.py  test_correlate.py  test_enrichment.py  test_hunt.py  test_investigate.py  test_models.py  test_normalizer.py  test_parsers.py  test_pipeline.py  test_playbook.py  test_schemas.py  test_store.py  test_triage.py
